# ChangeLog for mail-client/mozilla-thunderbird
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.239 2007/11/18 15:37:13 dertobi123 Exp $

  18 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  mozilla-thunderbird-2.0.0.9.ebuild:
  ppc stable, bug #196481

  18 Nov 2007; Markus Rothe <corsair@gentoo.org>
  mozilla-thunderbird-2.0.0.9.ebuild:
  Stable on ppc64; bug #196481

  16 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-2.0.0.9.ebuild:
  alpha/ia64/sparc stable wrt security #196481

  15 Nov 2007; Steve Dibb <beandog@gentoo.org>
  mozilla-thunderbird-2.0.0.9.ebuild:
  amd64 stable, bug 196481

  15 Nov 2007; Markus Meier <maekke@gentoo.org>
  mozilla-thunderbird-2.0.0.9.ebuild:
  x86 stable, security bug #196481

*mozilla-thunderbird-2.0.0.9 (15 Nov 2007)

  15 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-2.0.0.9.ebuild:
  Version bump

  05 Sep 2007; Raúl Porcel <armin76@gentoo.org>
  -mozilla-thunderbird-1.5.0.12.ebuild:
  old

  02 Sep 2007; Jose Luis Rivero <yoswink@gentoo.org>
  mozilla-thunderbird-1.5.0.13.ebuild:
  Stable on sparc wrt to security bug #187205

  29 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  mozilla-thunderbird-1.5.0.13.ebuild:
  ppc stable, bug #187205

  29 Aug 2007; Christoph Mende <angelos@gentoo.org>
  mozilla-thunderbird-1.5.0.13.ebuild:
  Stable on amd64 wrt security bug #187205

  28 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-1.5.0.13.ebuild:
  alpha/ia64/x86 stable wrt security #187205

*mozilla-thunderbird-1.5.0.13 (28 Aug 2007)

  28 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-1.5.0.13.ebuild:
  Version bump

  20 Aug 2007; Stuart Longland <redhatter@gentoo.org>
  mozilla-thunderbird-2.0.0.6.ebuild:
  Dropped -mips keyword. Thunderbird is known to work fine on little-endian