@@ -2,40 +2,6 @@ AUX icon/mozilla-thunderbird-unbranded.desktop 187 RMD160 cf07583a0f333aa1b5d774
 AUX icon/mozilla-thunderbird.desktop 177 RMD160 29313a02894ad6367d8b0cb1c8ee57272d09c01b SHA1 cb8c9ef3a7c84a16af226b6b4aedcb57d1b4146e SHA256 e4ccc7c1fd66e0ef928ad0860bee6b435cb2c5d39810aa271915c9151c73cd8f
 AUX icon/thunderbird-icon-unbranded.png 13280 RMD160 1654b2cfa39631e2084da982001113972eb41c09 SHA1 2fdca79e57c79d2485eb56d31de7afb05337898e SHA256 28b605529bee4d8245afdbb2cab5a705d8fa8977a11635b54c7bc5a7d6a9619c
 AUX icon/thunderbird-icon.png 6499 RMD160 1aeece7719c1c1629b98fc11870641769681a048 SHA1 651d244e96fa0edf13f68f5ef9047432eb6ed3bf SHA256 ff9749e42b82b80425bb52883d63baa53298af7be98870ee6b73f0a6cf0ab22d
-DIST mozilla-thunderbird-2.0.0.4-patches-0.1.tar.bz2 28506 RMD160 3af7b07b20243edb4465e9e482ed83d7ad75c413 SHA1 12719f8ea09fd4a7ab5fd232383b335fe03b379f SHA256 2cf91839e8b609034cb0e843d0b87b2e3d1e8aa3db2ff636153a9120393a4272
-DIST mozilla-thunderbird-2.0.0.6-be.xpi 184807 RMD160 f595cd9848609b0627dec53f5c9e52574f3ab292 SHA1 85523acc3e10463bb130ce582d53b33bbb4e7100 SHA256 c35069fa454578036d1d66ea10256f454f50afb43da66cf710cf7710e4ef33b3
-DIST mozilla-thunderbird-2.0.0.6-bg.xpi 196591 RMD160 97b75e20b9886755ee6915e7f41ed688cb18e543 SHA1 35ddef3ef0600fe52b0043dd88a8a0ba6c302be0 SHA256 75a2bb78bf057ddacf98dfc83fc9b4019b1fb80f51d707e0fa55efb544d6db75
-DIST mozilla-thunderbird-2.0.0.6-ca.xpi 184222 RMD160 da66582d6c7a1e5ebf34f6e3adb2f90b39328c35 SHA1 00499fd33866df1caf5ced22c8f7c6e2cc661c29 SHA256 3ff1952c61fd85a08be9f25f7a55e23b136962a9dd48f140a3583acdf2b3652b
-DIST mozilla-thunderbird-2.0.0.6-cs.xpi 186152 RMD160 e57d729d2b88eb77807b9a60946e70855ca074d3 SHA1 bbf8f2312e99dafb67cedecb69648d01c477dcba SHA256 5821027eb5fee8582786ab1765ca10caf02840d5c4872386bc7f1729a526f370
-DIST mozilla-thunderbird-2.0.0.6-da.xpi 179126 RMD160 0d5c336d350b9c6a4bba3dc43274fa996daa0e9d SHA1 2a5008af7703e5bde93dbaea6418b646b1f5e3a8 SHA256 30f0e14aa3de0fde8f3b0d2dfe639953ebd09682cec523f8738ec93e73253f42
-DIST mozilla-thunderbird-2.0.0.6-de.xpi 159067 RMD160 2fbff111cf4aa44342498196ee0f4d2ad21e0af4 SHA1 0a106254ddc9c47acbd8a2d664da3ff7329f65e4 SHA256 bb4ff9c80ff36d5eb074f5e8538e9a55e73a3c23df589b77cef06b871b23c343
-DIST mozilla-thunderbird-2.0.0.6-el.xpi 183062 RMD160 39f91e5f8402c27ca00ffc0545158d1c6814aa41 SHA1 d34302f73052cabbd97df7bbe822623e9daad0bb SHA256 281dcb18b3e0ffa46716c915514b061f5a90321f4c3396218c033b34c04f7c60
-DIST mozilla-thunderbird-2.0.0.6-en-GB.xpi 173043 RMD160 6455891813cd32ec6758608bcad853a8a3ab8ad0 SHA1 243d71f0572e3e4972bb0cc2b0495d7822c6d8da SHA256 92ff97bf95d3ddf8996f1c43bebfe3aa3e0c9ec30a2216fb64c6e87ea85893e7
-DIST mozilla-thunderbird-2.0.0.6-es-AR.xpi 184674 RMD160 ef5caa46b56b4cc4953d223223f0f702a652f840 SHA1 23e95eb2420257b69f3651fb283509882cfceef1 SHA256 9654ed8f16bfb7f3926e336375abd00bf8afa70b7fb8c37649cdbf5fa16a2ecb
-DIST mozilla-thunderbird-2.0.0.6-es-ES.xpi 149565 RMD160 7cb89eafbff4225c55f20088ed9aeeccdab89248 SHA1 937e7dc93d5ccc44a75a657fb1495766138ac396 SHA256 4c813651530c027f67b3d83016a97aaef8db00aff088c93dd80b1bb5b14b013b
-DIST mozilla-thunderbird-2.0.0.6-eu.xpi 181784 RMD160 78555ec1b51f61717555cbdc9806f23182fd1499 SHA1 b66afb7fe93b9f8f53d89a7a1832b6691f414bc5 SHA256 0d36d04fa10e069ea2d4320556abe015e13d99ac3d00558495f82313ece6dd06
-DIST mozilla-thunderbird-2.0.0.6-fi.xpi 187725 RMD160 5edf6b8de9f2c357325874c5ac61c700e0b51e64 SHA1 968c7479c94bf043d860726934f2c178cf48e48a SHA256 f3e4148e58ba8a1256339e93e8d123b377127274ad3a6a0a24d1aca7341ec0e8
-DIST mozilla-thunderbird-2.0.0.6-fr.xpi 191234 RMD160 025f11e1769cd465e5537b9d59694835d3eef046 SHA1 6df305dc297ee47eec5fac664dc79ebe5372a742 SHA256 f339ca14908cbee9f03e76be960b3e072c65530ed9d5efc720a3468c64058114
-DIST mozilla-thunderbird-2.0.0.6-ga-IE.xpi 185956 RMD160 c32a2c016ef0da7f990c2f1ccaee3665254346fd SHA1 5e3ce2b9f0d2ddc009ee8bf55022be886e9d97c6 SHA256 40247afae8b8edd0ae8ad6a12ad2a00ca7de44530a13972c33ed3cb55de2d3ba
-DIST mozilla-thunderbird-2.0.0.6-hu.xpi 191688 RMD160 961c94a16df0d2e6b2dd67139f569d7314cb1a98 SHA1 cc08650fc254d07401942676c8b6109a79ca2c65 SHA256 874098b6aca8fb0b4cc82bd00d154ef9230bfb73dd3315676f7c7373c9971092
-DIST mozilla-thunderbird-2.0.0.6-it.xpi 152543 RMD160 39286aac687296d4de5a9488684f5344f673b160 SHA1 2c0cecdb157d830b16e18e801409057962766941 SHA256 2588dc173038642834fabeafd33052fe6b0542a7e9cd7849f709d3d9401509fd
-DIST mozilla-thunderbird-2.0.0.6-ja.xpi 199402 RMD160 3cc0b6fea9b813c82d65a93c0946887fec70b4fe SHA1 f4270356f550163b8efc86617e04a16075022054 SHA256 e80ea365549b993dc4a4b4c15696375a86e899254fcde8a58d71d3241bf470e6
-DIST mozilla-thunderbird-2.0.0.6-lt.xpi 189452 RMD160 89ea869bd6c8dd9852f86519bcf13091fcd13d10 SHA1 1c7ec42fc6b7f9d39d334ad8f5a1e8ee0ab31a47 SHA256 07ce15cc76d7d69ccdc7b2c0fe9ebb4b3ee775b53ffb1dec96f8f58059844669
-DIST mozilla-thunderbird-2.0.0.6-mk.xpi 196599 RMD160 8287bf2c4d0ffe896b844a710f2a70d3373244ea SHA1 14d554b1c97813416874f19978a1cd3de9019aea SHA256 cf2ab7a77b0c2ec872d1a4f54c8e6c746a6a2bdfb6d6f1fe190f5478aeea3eed
-DIST mozilla-thunderbird-2.0.0.6-nb-NO.xpi 183234 RMD160 a24e84113568c9d97a9cb1cf0ef9598a6670c903 SHA1 7f2c90e4159a9bdf5f3ac8a6b517d3352490a556 SHA256 373d6c35989b3771d1d3cc092a3966a18c7659a50039b1124554b19534ffc367
-DIST mozilla-thunderbird-2.0.0.6-nl.xpi 184156 RMD160 3e43ed9a989268c331830316913838acfa2bfe9b SHA1 028fc62a2b1dc137c6a0e5baefcdcda8c9b35324 SHA256 c591d00a49a6df43bfb7bea09d030348ac9090fdb9375171276b0dc6a31c311c
-DIST mozilla-thunderbird-2.0.0.6-nn-NO.xpi 184110 RMD160 b71c67e866799bf7b4ad57504b0b448c9702d81c SHA1 ee9e28285233fb317a017e5214742ec04388cec2 SHA256 e5ba9d09d5736444172d6b5c85e43ac83fb886e9595325732aeed22b1fa66d8e
-DIST mozilla-thunderbird-2.0.0.6-pa-IN.xpi 205012 RMD160 cf52c61ed22ab1ba5e19404d4ae2f7716d85ceb4 SHA1 ac74bd90ca9d23740effa040df4c013b654dbe97 SHA256 9532c1ff03bf451a15d8c05533143e5d16243e74287138e70fb53ca726c23ba0
-DIST mozilla-thunderbird-2.0.0.6-pl.xpi 177385 RMD160 185d6db6070746c4f82e3fdf0a9a2852c37b5fb1 SHA1 cdf4fa4279daf84af1eb99cb801d53171f199e40 SHA256 83926aa3b046886149015da6c918193c118ffd10322ed8532410cc09d309b296
-DIST mozilla-thunderbird-2.0.0.6-pt-BR.xpi 183067 RMD160 d7b2d0f99d5a7dfc604e0e918a7c7eee07b1f1c2 SHA1 f0cc2cce56efbdd9a08938fa7e15fa5915d6a6bf SHA256 8e6e351ab1175cdd04e84bf0deb3c9756317a2f8af4c501eb086bcf88b7e8962
-DIST mozilla-thunderbird-2.0.0.6-pt-PT.xpi 183919 RMD160 f128f2318bc0a6d8538a8920f20a5bc8d95aff45 SHA1 bddc3c12ed8c2caa3f5bf0edbbd41c9c25fddc22 SHA256 9eb26780b1405073de3f5a282fdf0e6eb4fb7554545655b32fd2bd669e9dce4e
-DIST mozilla-thunderbird-2.0.0.6-ru.xpi 173904 RMD160 b713312d81ae92cbf16d41166b408f177db10328 SHA1 557eeb25aec512b731e70297dd1ea48530d90fc7 SHA256 6ceefd96063e983e25831be131a9e2909105834dd58d056c635cb132a7fab79a
-DIST mozilla-thunderbird-2.0.0.6-sk.xpi 191717 RMD160 6c248d21a7682e343070dd6bc5f1f6fe51daa14f SHA1 63163b9021c31d49bf39260e3ab27c8361eecf12 SHA256 dfa3e85f3f7e5bbed3fc177e43538cfd54b790f438dc454417c23aaf1182025d
-DIST mozilla-thunderbird-2.0.0.6-sl.xpi 188015 RMD160 74c95e3efa893c2feae8bcee8dfaed49a56fad9a SHA1 3d6f4bdf1bcbf9703ae44e83a5838af243a53885 SHA256 b0fce143e7183966528df334af2113fdcfda825cae2f30545d0877459934c632
-DIST mozilla-thunderbird-2.0.0.6-sv-SE.xpi 191926 RMD160 658e40b27af5ccb727f8dafce23a7e6ccc3ce330 SHA1 39125b02ea47caf7aac7589716207a09f0779821 SHA256 d7acfe085d28df7d5b9009368c51b81f36d6aae53635e4e374eef9a3a676901c
-DIST mozilla-thunderbird-2.0.0.6-tr.xpi 157692 RMD160 ceea6654aa0f7a0764ffa1f7522e0f2ba9ca49a0 SHA1 3c49d83a796555526b3d64ff0d2d600b66ad63e3 SHA256 3d80bfa315953f530b9feceb3b24f79f13f86e0d85db08b513112299b46b580f
-DIST mozilla-thunderbird-2.0.0.6-zh-CN.xpi 147617 RMD160 175ea3c6d784061c7f2537436acfb1d3acfd099c SHA1 b97d2cb1480601ef9e16b2046f2ac2401f71cc18 SHA256 c520cdcb95e3b24392475c5d38cf2dd9b0092d7e758d02963be0545dc8f22f7a
-DIST mozilla-thunderbird-2.0.0.6-zh-TW.xpi 153695 RMD160 1566e1acf882dfda982f710e4006bc05899d7c11 SHA1 061e00e4b5e14b2ff57dabe4ca2d1a7ee080c3c6 SHA256 05881ef25cb8c75c6bec09dba4e3521611528919606f9b2f0dd0c90d1eda3a27
 DIST mozilla-thunderbird-2.0.0.9-be.xpi 184808 RMD160 bd8af47a09787f94ba6c54118b0cc121a652d117 SHA1 902311cb2059c4e66bcb5958f3bfb2e7fa647c6d SHA256 3ff41c8bde290e5cc303caeeae5fb54f767d432d0486f9fa8d3c736915fa30d3
 DIST mozilla-thunderbird-2.0.0.9-bg.xpi 196592 RMD160 96b35e0ff3a0176acd51f5b7af714408872a6036 SHA1 15b96e956f216e565cf7810873fa318897b578ae SHA256 b697ee8ecf735b4d7f8639066ca9eba1a5a7379fa94dcc6fb7b3b53c896badd9
 DIST mozilla-thunderbird-2.0.0.9-ca.xpi 184223 RMD160 755863fbe52457aeabdd56d3b8fd774e6b232066 SHA1 834cf33b71c6212619ccec29d6a28bb82671ac75 SHA256 e25e7e07c15cbbd83989a7371d33c4d6ea9a45ca00e5e9d56491f7597304497b
@@ -72,9 +38,7 @@ DIST mozilla-thunderbird-2.0.0.9-sv-SE.xpi 191925 RMD160 091a17ee11937b82576df73
 DIST mozilla-thunderbird-2.0.0.9-tr.xpi 157692 RMD160 f471c361ab141a84108ef2e3a4f732650fb01e9d SHA1 6c39e34ccc201ecef6e8680a11116f5b537aa4cc SHA256 0d9ad6e10cbd393ae705c3273f8acf9395204a44b713190bf039498cdf8c5536
 DIST mozilla-thunderbird-2.0.0.9-zh-CN.xpi 147618 RMD160 fe0e22ad5fc0d2a96e9f7cf73b9101af9a8afc58 SHA1 d5cd520bdd059116ed099cd3a292dd59a2038d1d SHA256 26aa1d64aca9f18a9b587da7dc0650129bb988ff9f5f12fe1ba85ee95a8b44e3
 DIST mozilla-thunderbird-2.0.0.9-zh-TW.xpi 153696 RMD160 ba6faa2386bc74465651a505c5f66ac86084247e SHA1 7609b996c107afe063521f12571da39d20052b0a SHA256 6a852fed42bd416446ace7dd73726222405d5bbd877add9d2e7e4a774c1c3767
-DIST thunderbird-2.0.0.6-source.tar.bz2 37461752 RMD160 5280feb5c09895e8ba37d84bef0e1aa215ae0028 SHA1 c38b17ad0fc51aed96bacafe3ffe7ed0edd0738c SHA256 73011090bc8af7137083f30e693289d6500154e2a785c55b7b28abcd1aac9e9b
 DIST thunderbird-2.0.0.9-source.tar.bz2 37562994 RMD160 0a7e3aeb76b4ef6c84634b2935e84f56dc859051 SHA1 fede9db98f25adb978b84129a6d15a4dbe6bbb3e SHA256 bff4078379abd8616811e06f848aaaebd2cf39b7ae70c1434377c2aaaa6fec80
-EBUILD mozilla-thunderbird-2.0.0.6.ebuild 7786 RMD160 5cb8e91492f88dbc194fe6e2175a3aa1afd05168 SHA1 cc7683842c5fbf765797e35d0a049d092a086ae6 SHA256 be1c0c54adc7998265c9661c02cd6bf93893a9fd2994043b52d94b736c61815f
 EBUILD mozilla-thunderbird-2.0.0.9.ebuild 7792 RMD160 7d99768762bb54dc455449a29d2e5151cdfcf2a9 SHA1 6c9cb2cb7f7bb79882f89f7b18ccfd4fdae107d8 SHA256 82fde40348b09ee37035b399e9d1ecdc796343510b30d3265b1341a3dd141960
-MISC ChangeLog 36813 RMD160 a37d28a4ceb4cb5c528d9b89ae5b235c86ffb3ef SHA1 428e94c28aef8de7a82203f1b106b5010fd122a6 SHA256 f7b2964ff69f903254e9b8e6677894ecc3c8a4692ccdd901ef8736f975b95034
+MISC ChangeLog 36905 RMD160 333cfc803e914ca5deb29037ea779c6f7f95af4a SHA1 8a072002c4e74702576f7a39b8985208728750ec SHA256 dea341db3c77589a673945fe84077e71c6afea65b72267a5d63216d20fcb4e5b
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
